fix config status

--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -2,20 +2,18 @@ owner: KachanovTeam
 repo: status
 
 sites:
-  - name: [Сервер] Лобби
+  - name: '[Сервер] Лобби'
     url: https://www.google.com
-  - name: [Сервер] Выживание
+  - name: '[Сервер] Выживание'
     url: https://en.wikipedia.org
-  - name: [Сервер] Выживание **(DEV)**
+  - name: '[Сервер] Выживание **(DEV)**'
     url: https://news.ycombinator.com
 
 status-website:
-  # Add your custom domain name, or remove the `cname` line if you don't have a domain
-  # Uncomment the `baseUrl` line if you don't have a custom domain and add your repo name there
-  cname: demo.upptime.js.org
+  cname: status.kachanovcraft.com
   # baseUrl: /your-repo-name
   logoUrl: https://raw.githubusercontent.com/upptime/upptime.js.org/master/static/img/icon.svg
-  name: Upptime
+  name: Статус сервисов KachanoCraft
   introTitle: "**Upptime** is the open-source uptime monitor and status page, powered entirely by GitHub."
   introMessage: This is a sample status page which uses **real-time** data from our [GitHub repository](https://github.com/upptime/upptime). No server required — just GitHub Actions, Issues, and Pages. [**Get your own for free**](https://github.com/upptime/upptime)
   navbar:
