--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -17,18 +17,18 @@ status-website:
   cname: status.kachanovcraft.com
   # baseUrl: /your-repo-name
   logoUrl: https://raw.githubusercontent.com/upptime/upptime.js.org/master/static/img/icon.svg
-  name: Status Servises KachanovTeam
-  introTitle: "**Upptime** is the open-source uptime monitor and status page, powered entirely by GitHub."
-  introMessage: This is a sample status page which uses **real-time** data from our [GitHub repository](https://github.com/upptime/upptime). No server required — just GitHub Actions, Issues, and Pages. [**Get your own for free**](https://github.com/upptime/upptime)
+  name: Status
+  introTitle: "**KachanovCraft** это комплекс серверов, которые дают новые возможности."
+  introMessage: Здесь вы можете получить информацию о состоянии серверов и сервисов, подконтрольные KachanovTeam. Пожалуйста, отслеживайте данную страницу на факт наличия проблем, все проблемы будут опубликованы здесь.
   navbar:
-    - title: Status
+    - title: Статус
       href: /
     - title: GitHub
       href: https://github.com/$OWNER/$REPO
   theme: dark
 
 i18n:
-  footer: 'Страница отслеживания состояния сервисов KachanovCraft. KachanovTeam 2022. Создано при помощи [Upptime](https://upptime.js.org)'
+  footer: 'Страница отслеживания состояния сервисов KachanovCraft. KachanovTeam © 2022. Создано при помощи [Upptime](https://upptime.js.org)'.
 
 # Upptime also supports notifications, assigning issues, and more
 # See https://upptime.js.org/docs/configuration
