--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -15,10 +15,9 @@ assignees:
 
 status-website:
   cname: status.kachanovcraft.com
-  # baseUrl: /your-repo-name
   logoUrl: https://raw.githubusercontent.com/upptime/upptime.js.org/master/static/img/icon.svg
   name: Status
-  introTitle: "**KachanovCraft** это комплекс серверов, которые дают новые возможности."
+  introTitle: "**KachanovTeam Status Servises**"
   introMessage: Здесь вы можете получить информацию о состоянии серверов и сервисов, подконтрольные KachanovCraft. Пожалуйста, отслеживайте данную страницу на факт наличия проблем, все проблемы будут опубликованы здесь.
   navbar:
     - title: Статус
@@ -28,7 +27,5 @@ status-website:
   theme: dark
 
 i18n:
-  footer: 'Страница отслеживания состояния сервисов KachanovCraft. KachanovTeam © 2022. Создано при помощи [Upptime](https://upptime.js.org).'
-
-# Upptime also supports notifications, assigning issues, and more
-# See https://upptime.js.org/docs/configuration
+  footer: 'Страница отслеживания состояния сервисов KachanovCraft. \n KachanovTeam © 2022. Создано при помощи [Upptime](https://upptime.js.org).'
+  allSystemsOperational: Все системы работают
