--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -18,7 +18,7 @@ status-website:
   logoUrl: https://raw.githubusercontent.com/upptime/upptime.js.org/master/static/img/icon.svg
   name: Status
   introTitle: "**KachanovTeam Status Servises**"
-  introMessage: Здесь вы можете получить информацию о состоянии серверов и сервисов, подконтрольные KachanovCraft. Пожалуйста, отслеживайте данную страницу на факт наличия проблем, все проблемы будут опубликованы здесь.
+  introMessage: Здесь вы можете получить информацию о состоянии серверов и сервисов, подконтрольные KachanovTeam. <br> Пожалуйста, отслеживайте данную страницу на факт наличия проблем, все проблемы будут опубликованы здесь.
   navbar:
     - title: Статус
       href: /
@@ -27,5 +27,5 @@ status-website:
   theme: dark
 
 i18n:
-  footer: 'Страница отслеживания состояния сервисов KachanovCraft. \n KachanovTeam © 2022. Создано при помощи [Upptime](https://upptime.js.org).'
-  allSystemsOperational: Все системы работают
+  footer: 'Страница отслеживания состояния сервисов KachanovCraft. <br> KachanovTeam © 2022. Создано при помощи [Upptime](https://upptime.js.org).'
+  allSystemsOperational: 'Все системы работают!'
