--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -53,8 +53,8 @@ i18n:
   averageResponseTimeTitle: 'Среднее время ответа'
   sevelDayResponseTime: '7-дневное время ответа'
   responseTimeMs: 'Время ответа (мс)'
-  up: 'Вверх'
-  down: 'Вниз'
+  up: 'Активен'
+  down: 'Не активен'
   degraded: 'Понижено'
   ms: 'мс'
   loading: 'Загрузка'
