--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -30,7 +30,7 @@ status-website:
       href: /
     - title: GitHub
       href: https://github.com/$OWNER/$REPO
-  themeUrl: https://status.kachanovcraft.com/custom.css
+  theme: night
 
 i18n:
   footer: 'Страница отслеживания состояния сервисов KachanovTeam. <br> KachanovTeam © 2022. Создано при помощи [Upptime](https://upptime.js.org).'
