--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -29,8 +29,8 @@ status-website:
   navbar:
     - title: Статус
       href: /
-    - title: GitHub
-      href: https://github.com/$OWNER/$REPO
+    - title: Discord
+      href: https://discord.gg/kachanlot-games-interect
   theme: night
 
 i18n:
