--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -32,6 +32,7 @@ status-website:
     - title: Discord
       href: https://discord.gg/kachanlot-games-interect
   theme: night
+  customHeadHtml: "<!-- Yandex.Metrika counter --> <script type="text/javascript" >    (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};    m[i].l=1*new Date();k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})    (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");    ym(87522688, "init", {         clickmap:true,         trackLinks:true,         accurateTrackBounce:true,         webvisor:true    }); </script> <noscript><div><img src="https://mc.yandex.ru/watch/87522688" style="position:absolute; left:-9999px;" alt="" /></div></noscript> <!-- /Yandex.Metrika counter -->"
 
 i18n:
   footer: 'Страница отслеживания состояния сервисов KachanovTeam. <br> KachanovTeam © 2022. Создано при помощи [Upptime](https://upptime.js.org).'
